<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_pokemon"
            android:icon="@drawable/ic_pokeball_dark_24"
            android:title="@string/drawer_my_pokemons" />
        <item
            android:id="@+id/nav_pokemons"
            android:icon="@drawable/ic_pokemon_white_24"
            android:title="@string/drawer_pokemons" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_arrow_back_black_24dp"
                android:title="@string/drawer_logout" />
        </menu>
    </item>

</menu>
