<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>

        <variable
            name="pokemon"
            type="br.inatel.pokemonbootcamp.model.pojo.Pokemon" />
    </data>

    <android.support.v7.widget.CardView
        android:id="@+id/alarm_station_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_vertical_margin">

                <TextView
                    android:id="@+id/tv_pokemon_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:text="@{pokemon.name}"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_pokemon_picture"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name" />

                <TextView
                    android:id="@+id/tv_pokemon_number_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin"
                    android:text="@string/details_number"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_pokemon_picture" />

                <TextView
                    android:id="@+id/tv_pokemon_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/nav_header_vertical_spacing"
                    android:text="@{pokemon.pokeNumber}"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_number_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_pokemon_number_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_pokemon_number_text" />

                <TextView
                    android:id="@+id/tv_pokemon_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin"
                    android:text="@string/details_types"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_number" />

                <TextView
                    android:id="@+id/tv_pokemon_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/nav_header_vertical_spacing"
                    android:text="@{pokemon.types}"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_type_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_pokemon_type_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_pokemon_type_text" />

                <TextView
                    android:id="@+id/tv_pokemon_type_weight_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin"
                    android:text="@string/details_weight"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_types" />

                <TextView
                    android:id="@+id/tv_pokemon_type_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/nav_header_vertical_spacing"
                    android:text="@{pokemon.weight}"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_type_weight_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_pokemon_type_weight_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_pokemon_type_weight_text" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin"
                    android:text="@string/details_stats"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_type_weight" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_hp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin_double"
                    android:text="@string/details_stats_hp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_type_stats_text" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{pokemon.stats.hp}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_type_stats_hp_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_pokemon_type_stats_hp_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_pokemon_type_stats_hp_text" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_speed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin_double"
                    android:text="@string/details_stats_speed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_type_stats_hp" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{pokemon.stats.speed}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_type_stats_speed_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_pokemon_type_stats_speed_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_pokemon_type_stats_speed_text" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_attack_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin_double"
                    android:text="@string/details_stats_attack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_type_stats_speed" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_attack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{pokemon.stats.attack}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_type_stats_attack_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_pokemon_type_stats_attack_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_pokemon_type_stats_attack_text" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_defense_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin_double"
                    android:text="@string/details_stats_defense"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_type_stats_attack" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{pokemon.stats.defense}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_type_stats_defense_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_pokemon_type_stats_defense_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_pokemon_type_stats_defense_text" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_special_attack_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin_double"
                    android:text="@string/details_stats_special_attack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_type_stats_defense" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_special_attack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{pokemon.stats.specialAttack}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_type_stats_special_attack_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_pokemon_type_stats_special_attack_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_pokemon_type_stats_special_attack_text" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_special_defense_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_vertical_margin_double"
                    android:text="@string/details_stats_special_defense"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_type_stats_special_attack" />

                <TextView
                    android:id="@+id/tv_pokemon_type_stats_special_defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{pokemon.stats.specialDefense}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_type_stats_special_defense_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_pokemon_type_stats_special_defense_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_pokemon_type_stats_special_defense_text" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>

</layout>